deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 4 # Заданное количество реплик
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1       # Во время обновления создается 1 новый под поверх нормы
      maxUnavailable: 0 # Ни один под не может быть недоступен в процессе обновления
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          # Запросы и лимиты ресурсов для подов
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          # Проверки готовности, чтобы трафик не шел на незапущенные поды
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
