virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virtualservice
  namespace: default
spec:
  hosts:
    - "nginx-test.k8s-1.sa"
    - "nginx-test.k8s-2.sa"
  gateways:
    - nginx-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: nginx-service
            port:
              number: 80
